objects/TracHier__Subscription__c.object
<CustomObject>
    <fields>
        <fullName>TracHier__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TracHier__Interval__c</fullName>
        <description>Interval the notification should run. (Monthly/Weekly/Daily)</description>
        <externalId>true</externalId>
        <label>Interval</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Last_Run_Date__c</fullName>
        <description>The date and time of the most recent processing by Subscription Scheduler.</description>
        <inlineHelpText>The date and time of the most recent processing by Subscription Scheduler.</inlineHelpText>
        <label>Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracHier__Object_Type__c</fullName>
        <label>Object Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__User__c</fullName>
        <description>Reference to a User record.</description>
        <externalId>true</externalId>
        <label>User</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Subscription</label>
    <listViews>
        <fullName>TracHier__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>